--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>xiaojunjun</title>
+  <title>深藏功与名</title>
+  <style>
+    html,
+    body {
+      margin: 0px;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background: rgb(61, 7, 68);
+    }
+    #canvas {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      height: 100%;
+    }
+    #container {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      color: #fff 
+    }
+    h1 {
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-  <h1>hello world</h1>
+  <canvas id="canvas"></canvas>
+  <div id="container">
+    <h1>深</h1>
+    <h1>藏</h1>
+    <h1>功</h1>
+    <h1>与</h1>
+    <h1>名</h1>
+    <p></p>
+  </div>
+  <script src="./js/utils.js"></script>
 </body>
 </html>
